--- a/textchange/templates/textchange/help.html
+++ b/textchange/templates/textchange/help.html
@@ -3,7 +3,7 @@
     {% block content %}
     <div class="content_outer">
       <div class="content_container">
-        <div class="help_page">
+        <div class="help_page standard_container">
       <h1 id"#top">Help Centre</h1>
       <span class="toc"><a href="#Create">Logging In</a></br></span>
       <span class="toc"><a href="#Search">Searching</a></br></span>
