--- a/textchange/static/textchange/browser.css
+++ b/textchange/static/textchange/browser.css
@@ -1,3 +1,37 @@
+.standard_container {
+  position: relative;
+  width: 80vw;
+  max-width: 640px;
+  padding: 0px 20px 0px 20px;
+  min-height: calc(100vh - 70px);
+}
+.content_container.login_content_container {
+  top: 90px;
+}
+.login_container {
+  height: 400px;
+  position: relative;
+  width: 80vw;
+  max-width: 640px;
+  padding: 0px 20px 0px 20px;
+}
+.content_container {
+  top: 65px;
+  position: relative;
+  display: inline-block;
+  margin: auto;
+  background-color: white;
+  min-height: calc(100vh - 70px);
+  border: 1px solid #E3E3E3;
+  box-shadow: 0px 2px 3px 0px rgba(166, 166, 166, 0.20);
+}
+
+.yafuckedupschool {
+  color: red;
+  font-size: 12px;
+}
+
+
 .search_wrapper {
   width: 30vw;
   background-color: white;
@@ -28,21 +62,25 @@
   background-color: #ffffff;
   height: 40px;
   width: 45vw;
+  color: #7D7D7D;
   max-width: 380px;
-  min-width: 210px;
-  padding-left: 10px;
-  font-size: 14px;
+  min-width: 209px;
+  padding-left: 14px;
+  font-size: 16px;
   z-index: 10;
 }
 .index-search-form .input_form_school {
-  border-radius: 4px 0 0 4px;
+  border-radius: 0 0 0 0;
   background-color: #ffffff;
   height: 42px;
   width: 35vw;
   max-width: 240px;
   min-width: 170px;
-  padding-left: 6px;
-  font-size: 14px;
+  color: #7D7D7D;
+  padding-left: 14px;
+  -webkit-appearance: none;
+  -webkit-border-radius: 0;
+  font-size: 16px;
   border-top: none;
   border-bottom: none;
   border-left: 1px solid #DBDBDB;
@@ -61,31 +99,40 @@
   background-size: 20px 20px;
   background-repeat: no-repeat;
   background-position: 10px 11px;
-  text-indent: -250px;
+  text-indent: -90px;
 }
 
 
 .results-search-form {
-  position: relative;
   margin: auto;
   display: block;
   text-align: center;
-  padding: 0px 15px 6px 15px;
+  padding: 0px 0px 6px 0px;
   vertical-align: middle;
   background-color: white;
   border-bottom: 1px solid #E3E3E3;
+}
+.results-search-form-wrapper {
+  top: 65px;
+  z-index: 1;
+  position: fixed;
+  width: 100vw;
+}
+.results_outer_content {
+  top: 108px;
 }
 .results-search-form .input_form {
   border: none;
   background-color: #ffffff;
   height: 34px;
   top: 4px;
+  color: #7D7D7D;
   position: relative;
-  padding-left: 8px;
+  padding-left: 14px;
   width: 45vw;
   max-width: 400px;
   min-width: 207px;
-  font-size: 14px;
+  font-size: 16px;
   border-left: 1px solid #DBDBDB;
   border-right: 1px solid #DBDBDB;
 }
@@ -97,7 +144,8 @@
   border: none;
   top: 4px;
   width: 30vw;
-  min-width: 165px;
+  padding-left: 16px;
+  min-width: 160px;
   max-width: 220px;
   font-size: 14px;
   border-left: 1px solid #DBDBDB;
@@ -107,6 +155,7 @@
   border: none;
   background-color: #ffffff;
   height: 36px;
+  color: #7D7D7D;
   width: 42px;
   top: 3px;
   border-left: 1px solid #DBDBDB;
@@ -119,5 +168,5 @@
   background-repeat: no-repeat;
   background-position: 10px 9px;
   line-height: 0px;
-  text-indent: -250px;
+  text-indent: -90px;
 }
