--- a/textchange/static/textchange/mycss.css
+++ b/textchange/static/textchange/mycss.css
@@ -3,9 +3,36 @@ html, body {
   font-family: 'SourceSansPro';
   height: 100%;
   background-color: #FBFBFB;
+  -webkit-font-smoothing: antialiased;
 }
 input, select, textarea {
   outline: 0;
+  font-family: 'SourceSansPro';
+  -webkit-font-smoothing: antialiased;
+  font-size: 16px;
+}
+input {
+  padding-left: 8px;
+}
+label {
+  font-family: 'SourceSansPro-SemiBold';
+  font-size: var(--header3);
+  padding-right: 10px;
+}
+input::-webkit-input-placeholder{
+  color:#7D7D7D;
+}
+input:-moz-placeholder {
+  color: #7D7D7D;
+}
+:root {
+  --emperor: #2e2e2e;
+  --grey: #7D7D7D;
+  --branding: 25px;
+  --header: 20px;
+  --header2: 18px;
+  --header3: 16px;
+  --std-text: 14px;
 }
 @font-face {
   font-family: 'SourceSansPro';
@@ -20,31 +47,33 @@ input, select, textarea {
   background: linear-gradient(180deg, #4EA9F6 , #3583D0);
 }
 
-.grey-text {
-  color: #7D7D7D;
+.standard_container.results_container {
+  padding: 0px;
+  box-shadow: 0px 2px 3px 0px rgba(166, 166, 166, 0.20);
+}
+.results_outer_content.content_container {
+  background-color: #FBFBFB;
+  border: none;
+  padding-top: 10px;
+  box-shadow: none;
 }
 
+.errorlist {
+  margin: 0px;
+  list-style: none;
+  padding-left: 81px;
+}
+.errorlist li {
+  color: red;
+  font-size: 12px;
+}
+.yafuckedup {
+  color: red;
+  font-size: 12px;
+  margin-left: -21px;
+}
 .content_outer {
   text-align: center;
-}
-
-.content_container {
-  top: 20px;
-  position: relative;
-  display: inline-block;
-  margin: auto;
-  background-color: white;
-  padding-bottom: 40px;
-  border-radius: 8px;
-  border: 1px solid #BDBDBD
-}
-
-.results_container {
-  position: relative;
-  width: 80vw;
-  min-width: 360px;
-  max-width: 660px;
-  border-radius: 8px;
 }
 .results_outer_content {
   background-color: #FBFBFB;
@@ -66,19 +95,20 @@ input, select, textarea {
   background-color: white;
 }
 .results_table div:first-child {
-  border-radius: 5px 0 0 0;
+  border-radius: 6px 0 0 0;
 }
 .results_table div:nth-child(2) {
-  border-radius: 0 5px 0 0;
+  border-radius: 0 6px 0 0;
 }
 .results_table div:last-child {
-  border-radius: 0 0 5px 0;
+  border-radius: 0 0 6px 0;
 }
 .results_table div:nth-last-child(2) {
-  border-radius: 0 0 0 5px;
+  border-radius: 0 0 0 6px;
 }
 .results_table a {
   float: inherit;
+  color: var(--grey);
   width: 100%;
   text-align: left;
   text-decoration: none;
@@ -96,8 +126,7 @@ input, select, textarea {
 }
 .results_top-left a {
   padding-left: 8px;
-  color: black;
-
+  color: var(--emperor);
 }
 .results_bottom-left {
   float: left;
@@ -118,7 +147,7 @@ input, select, textarea {
 }
 .results_top-right a {
   padding-right: 8px;
-  color: black;
+  color: var(--emperor);
   text-align: right;
   padding-left: 8px;
 }
@@ -133,9 +162,7 @@ input, select, textarea {
   padding-left: 8px;
 }
 
-.content_container.login_content_container {
-  top: 20vh;
-}
+
 .close_login {
   width: 15px;
   height: 15px;
@@ -147,100 +174,80 @@ input, select, textarea {
   background-repeat: no-repeat;
   background-position: top right;
 }
-.help_page {
-  width: 80vw;
-  min-width: 260px;
-  max-width: 600px;
-  padding: 20px;
-  background-color: white;
-  text-align: center;
-  border-radius: 8px;
-}
 .help_page p, li, h1, h2, span {
   text-align: left;
+  color: var(--emperor);
+}
+.help_page h1 {
+  font-size: var(--branding);
+  color: var(--emperor);
+  margin: 20px 0px 20px 0px;
+}
+.help_page h2 {
+  font-size: var(--header2);
+  color: var(--emperor);
+  margin: 20px 0px 10px 0px;
+}
+.help_page p {
+  font-size: var(--std-text);
+  color: var(--emperor);
+  margin: 10px 0px 20px 0px;
 }
 .help_page span {
   display: block;
 }
 .help_page span a {
-  color: grey;
+  color: var(--grey);
   text-decoration: none;
   line-height: 24px;
 }
 .help_page a {
-  color: black;
+  color: var(--emperor);
   text-decoration: none;
+  font-size: var(--header3);
 }
 .help_page a:hover {
-  color: black;
+  color: var(--emperor);
 }
 .help_page hr {
   margin-top: 15px;
   margin-bottom: 5px;
+  border: 0;
+  border-top: 1px solid #CFCFCF;
 }
 
-
-.about_page {
-  width: 80vw;
-  min-width: 260px;
-  max-width: 600px;
-  padding: 20px;
-  background-color: white;
-  text-align: center;
-  border-radius: 8px;
-}
 .about_page p {
   text-align: left;
+  color: var(--emperor);
 }
-
-
-.manage_container {
-  max-width: 460px;
-  min-width: 320px;
-  width: auto;
-  margin: auto;
-  height: 340px;
-}
-
-.feedback {
-  margin: auto;
-  width: 500px;
+.contact_wrapper {
+  width: 100%;
 }
 .feedback_field {
-  width: 195px;
-  border-radius: 3px;
-  border: none;
-  background-color: #ffffff;
+  border-radius: 6px;
+  height: 22px;
+  padding: 5px;
+  border: 1px solid #BDBDBD;
+  margin-top: 15px;
+  max-width: 200px;
+  width: calc(100% - 72px);
+}
+.feedback_label {
+  width: 55px;
+}
+.feedback_basic_wrapper {
 }
 .feedback_textarea {
-  width: 495px;
-  border-radius: 3px;
-  border: none;
+  left: 0px;
+  width: 100%;
+  border: 1px solid #BDBDBD;
+  border-radius: 6px;
   background-color: #ffffff;
 }
 .feedback_submit {
   float: right;
 }
 
-
-.post_container {
-  width: 600px;
-  margin-left: auto;
-  margin-right: auto;
-  height: 100%;
-  border-radius: 8px;
-}
-
-.login_container {
-  background-color: white;
-  position: relative;
-  width: 80vw;
-  min-width: 310px;
-  max-width: 420px;
-  padding: 0 30px 0 30px;
-  height: 400px;
-  border-radius: 8px;
-}
 .login_container p {
   text-align: center;
 }
@@ -253,7 +260,7 @@ input, select, textarea {
   text-decoration: none;
 }
 
-.login_container .login_emoji {
+.login_container .login_shit {
   width: 22px;
   height: 22px;
   display: block;
@@ -266,15 +273,14 @@ input, select, textarea {
 }
 .facebook_login {
   background-color: #4267B2;
-  box-shadow: 0px 1px 5px 0px rgb(166, 166, 166, 0.30);
+  box-shadow: 0px 1px 5px 0px rgba(166, 166, 166, 0.30);
   color: #ffffff;
   height: 60px;
-  max-width: 380px;
+  max-width: 400px;
   width: 100%;
-  min-width: 300px;
   border-radius: 6px;
   position: relative;
-  top: 15px;
+  top: 10px;
   border: 1px solid #4267B2;
   display: block;
   background-image: url("facebook-login.svg");
@@ -295,21 +301,23 @@ input, select, textarea {
    font-size: 15px;
    color: #D2D2D2;
 }
+.login_sorry {
+  color: var(--grey);
+}
 .google_login span {
   color: grey;
   position: relative;
-  left: 58px;
-  top: 16px;
+  left: 54px;
+  top: 10px;
 }
 .google_login {
   margin-bottom: 3px;
   background-color: #ffffff;
-  box-shadow: 0px 1px 5px 0px rgb(166, 166, 166, 0.20);
+  box-shadow: 0px 1px 5px 0px rgba(166, 166, 166, 0.20);
   color: #ffffff;
   height: 60px;
-  max-width: 380px;
+  max-width: 400px;
   width: 100%;
-  min-width: 300px;
   border-radius: 6px;
   border: 1px solid #E6E6E6;
   position: relative;
@@ -330,24 +338,15 @@ input, select, textarea {
   float: right;
 }
 
-.posting_form {
-  width: 80vw;
-  min-width: 200px;
-  max-width: 400px;
-  padding: 20px;
-  background-color: white;
-  text-align: center;
-  border-radius: 8px;
-}
 .add_a_textbook {
   font-family: 'SourceSansPro-SemiBold';
   display: block;
   margin-bottom: 12px;
+  padding: 20px 0px 20px 0px;
   font-size: 20px;
 }
 .add_posting_table {
   width: 80vw;
-  min-width: 200px;
   max-width: 400px;
   margin: 0 auto;
 }
@@ -361,11 +360,9 @@ input, select, textarea {
 .add_posting_labels label {
   float: right;
   line-height: 25px;
-  padding-right: 5px;
 }
 .add_posting_comments_field {
-  border: none;
-  border-radius: 3px;
+  border-radius: 4px;
   width: auto;
   height: 100px;
   width: 98%;
@@ -377,11 +374,17 @@ input, select, textarea {
 .posting_comments label {
   left: 0px;
   position: absolute;
+  font-family: 'SourceSansPro-SemiBold';
+  font-size: var(--header3);
   padding-left: 20px;
   margin-top: 15px;
 }
+.add_posting_fields {
+  padding-bottom: 10px;
+}
 .add_posting_field {
-  border-radius: 3px;
+  border-radius: 4px;
+  box-sizing: border-box;
   height: 28px;
   width: calc(100% - 82px);
   background-color: white;
@@ -398,9 +401,10 @@ input, select, textarea {
   padding-top: 4px;
   padding-bottom: 8px;
   width: 100px;
+  color: var(--emperor);
   display: inline-block;
-  border: 1px solid #BDBDBD;
-  border-radius: 4px;
+  text-decoration: none;
+  border-radius: 6px;
 }
 .add_posting_button {
   margin-left: auto;
@@ -410,7 +414,7 @@ input, select, textarea {
   display: inline-block;
   width: 100px;
   background-color: green;
-  border-radius: 4px;
+  border-radius: 6px;
 }
 .add_posting_button_container {
   text-align: center;
@@ -419,6 +423,10 @@ input, select, textarea {
 .booktosell {
   font-size: 18px;
   padding: 0px 10px 0px 10px;
+}
+.booktosell a {
+  font-family: 'SourceSansPro-SemiBold';
+  text-decoration: none;
 }
 
 
@@ -447,7 +455,7 @@ input, select, textarea {
 }
 .help_in {
   text-decoration: none;
-  margin-left: 10px;
+  margin-left: 15px;
 }
 .color {
   width: 120px;
@@ -467,8 +475,9 @@ input, select, textarea {
   top: 0px;
   width: 100%;
   background-color: #FFF;
-  position: relative;
-  z-index: 1;
+  position: fixed;
+  -webkit-backface-visibility: hidden;
+  z-index: 2;
   box-shadow: 0 1px 3px 0 rgba(166, 166, 166, 0.20);
   border-bottom: 1px solid #E3E3E3;
 }
@@ -480,12 +489,19 @@ input, select, textarea {
 }
 .header .leftheader {
   float: left;
-  padding: 18px 0 0 22px;
+  padding: 15px 0 0 50px;
 }
 .header_invisible .leftheader {
   float: left;
   padding: 4% 0 0 4%;
   display: inline-block;
+  font-family: 'SourceSansPro-SemiBold';
+}
+.header_invisible span, a, p {
+  color: white;
+}
+.header a, span {
+  color: var(--emperor);
 }
 .header_in {
   text-decoration: none;
@@ -495,10 +511,9 @@ input, select, textarea {
 .header .rightheader {
   float: right;
   display: inline-block;
-  padding: 22px 22px 0 0;
+  padding: 21px 50px 0 0;
 }
 .rightheader a {
-  color: black;
   text-decoration: none;
 }
 .header_invisible .rightheader {
@@ -522,7 +537,7 @@ input, select, textarea {
 /* Dropdown button on hover & focus */
 .dropbtn:hover, .dropbtn:focus, .dropbtn:active {
     background-color: #f1f1f1;
-    border-radius: 2px;
+    border-radius: 6px;
     padding: 2px;
 }
 
@@ -546,7 +561,7 @@ input, select, textarea {
 
 /* Links inside the dropdown */
 .dropdown-content a {
-    color: black;
+    color: var(--emperor);
     padding: 6px 8px;
     text-decoration: none;
     display: block;
