--- a/textchange/static/textchange/phonecss.css
+++ b/textchange/static/textchange/phonecss.css
@@ -1,3 +1,35 @@
+.standard_container {
+  position: relative;
+  width: calc(100vw - 42px);
+  padding: 0px 20px 0px 20px;
+  min-height: calc(100vh - 70px);
+  border-radius: 0px;
+}
+
+
+.content_container.login_content_container {
+  top: 0px;
+}
+.login_container {
+  min-height: calc(100vh - 25px);
+  position: relative;
+  width: calc(100vw - 2px);
+  top: 0;
+  padding: 0px 20px 0px 20px;
+}
+
+.content_container {
+  position: relative;
+  display: inline-block;
+  margin: auto;
+  top: 65px;
+  background-color: white;
+  min-height: calc(100vh - 70px);
+  border: 1px solid #E3E3E3;
+  box-shadow: 0px 2px 3px 0px rgba(166, 166, 166, 0.20);
+}
+
+
 .search_wrapper {
   width: 30vw;
   background-color: white;
@@ -13,43 +45,40 @@
   text-align: center;
   margin: auto;
   height: 130px;
-  padding: 0px 15px 0px 15px;
+  padding: 0px 30px 0px 30px;
 }
 .school_form_wrapper {
   display: inline-block;
-  margin-left: -7px;
   border-top: 1px solid #DBDBDB;
-
+  width: 100%;
+  border-radius: 0px 0px 0px 4px;
 }
 .index-search-form-wrapper {
   box-shadow: 0px 1px 10px 0px rgba(166, 166, 166, 0.30);
-  width: 45vw;
-  max-width: 380px;
-  margin: auto;
-  min-width: 215px;
 }
 .index-search-form .input_form {
   border: none;
   border-radius: 4px 4px 0px 0px;
   background-color: #ffffff;
   height: 40px;
-  width: 45vw;
-  max-width: 380px;
-  margin-left: -7px;
-  min-width: 211px;
-  padding-left: 10px;
-  font-size: 14px;
+  color: #7D7D7D;
+  padding-left: 14px;
+  width: calc(100% - 16px);
+  min-width: 190px;
+  font-size: 16px;
   z-index: 10;
 }
 .index-search-form .input_form_school {
-  border-radius: 0px 0 0 4px;
+  border-radius: 0px 0px 0px 4px;
   background-color: #ffffff;
   height: 42px;
-  width: calc(45vw - 43px);
-  max-width: 240px;
-  min-width: 178px;
-  padding-left: 6px;
-  font-size: 14px;
+  width: calc(100% - 44px);
+  -webkit-appearance: none;
+  -webkit-border-radius: 0px 0px 0px 4px;
+  color: #7D7D7D;
+  min-width: 148px;
+  padding-left: 14px;
+  font-size: 16px;
   border: none;
 }
 .index-search-form #search {
@@ -66,15 +95,14 @@
   background-size: 20px 20px;
   background-repeat: no-repeat;
   background-position: 10px 11px;
-  text-indent: -250px;
+  text-indent: -90px;
 }
 
 
 .results-search-form {
-  position: relative;
   margin: auto;
   display: block;
-  padding: 0px 15px 4px 15px;
+  padding: 0px 0px 4px 0px;
   text-align: center;
   vertical-align: middle;
   background-color: white;
@@ -83,26 +111,35 @@
 .results-search-form .school_form_wrapper {
   display: inline-block;
 }
+.results-search-form-wrapper {
+  top: 65px;
+  z-index: 1;
+  position: fixed;
+  -webkit-backface-visibility: hidden;
+}
 .results-search-form .input_form {
   border: none;
   background-color: #ffffff;
   height: 40px;
   margin-left: -5px;
   position: relative;
-  padding-left: 8px;
+  padding-left: 14px;
+  color: #7D7D7D;
   width: 100vw;
-  font-size: 14px;
+  font-size: 16px;
 }
 .results-search-form .input_form_school {
-  background-color: #ffffff;
-  height: 40px;
   position: relative;
+  background-color: #ffffff;
+  height: 42px;
+  width: calc(100% - 44px);
+  -webkit-appearance: none;
+  -webkit-border-radius: 0px 0px 0px 4px;
+  color: #7D7D7D;
+  min-width: 148px;
+  padding-left: 14px;
+  font-size: 16px;
   border: none;
-  padding-left: 6px;
-  top: 4px;
-  width: calc(100vw - 80px);
-  font-size: 14px;
-  border-right: 1px solid #DBDBDB;
 }
 .results-search-form #search {
   border: none;
@@ -119,5 +156,5 @@
   background-repeat: no-repeat;
   background-position: 10px 9px;
   line-height: 0px;
-  text-indent: -250px;
+  text-indent: -90px;
 }
