--- a/textchange/templates/textchange/contactpost.html
+++ b/textchange/templates/textchange/contactpost.html
@@ -1,8 +1,9 @@
 {% extends "textchange/base.html" %}
 
     {% block content %}
-
+    <div class="content_outer">
     <div class="content_container">
+      <div class="standard_container">
       <div class="post_info">
         <h3>Textbook Info</h3>
           <p><strong>Textbook: </strong>{{ posting.textbook.textbook_name|title }}</p>
@@ -25,5 +26,7 @@
           <img src="{{ posting.image.url }}" id="">
       </div>
     </div>
+  </div>
+</div>
 
     {% endblock %}
