--- a/textchange/templates/textchange/wishlisting.html
+++ b/textchange/templates/textchange/wishlisting.html
@@ -1,8 +1,10 @@
 {% extends "textchange/base.html" %}
 
     {% block content %}
+    <div class="content_outer">
+
     <div class="content_container">
-      <div class="manage_container">
+      <div class="manage_container standard_container">
       <div class="">
       <h2>Your Postings and Wishlist</h2>
       <span>You can manage your postings and wishes here...</span><br />
@@ -33,6 +35,7 @@
         </div>
       </div>
     </div>
+  </div>
 
 
     </div>
