--- a/textchange/static/textchange/mycss.css
+++ b/textchange/static/textchange/mycss.css
@@ -17,13 +17,16 @@ input {
 label {
   font-family: 'SourceSansPro-SemiBold';
   font-size: var(--header3);
-  padding-right: 10px;
+  padding-right: 8px;
 }
 input::-webkit-input-placeholder{
   color:#7D7D7D;
 }
 input:-moz-placeholder {
   color: #7D7D7D;
+}
+p {
+  color: var(--darknight);
 }
 :root {
   --emperor: #2e2e2e;
@@ -43,6 +46,10 @@ input:-moz-placeholder {
   src: url('fonts/SourceSansPro-Semibold.ttf');
 }
 
+.description_text {
+  color: var(--grey) !important;
+}
+
 #landing_page {
   background: linear-gradient(180deg, #4EA9F6 , #3583D0);
 }
@@ -51,13 +58,6 @@ input:-moz-placeholder {
   padding: 0px;
   box-shadow: 0px 2px 3px 0px rgba(166, 166, 166, 0.20);
 }
-.results_outer_content.content_container {
-  background-color: #FBFBFB;
-  border: none;
-  padding-top: 10px;
-  box-shadow: none;
-}
-
 .errorlist {
   margin: 0px;
   list-style: none;
@@ -93,18 +93,6 @@ input:-moz-placeholder {
   height: 30px;
   display: inline-block;
   background-color: white;
-}
-.results_table div:first-child {
-  border-radius: 6px 0 0 0;
-}
-.results_table div:nth-child(2) {
-  border-radius: 0 6px 0 0;
-}
-.results_table div:last-child {
-  border-radius: 0 0 6px 0;
-}
-.results_table div:nth-last-child(2) {
-  border-radius: 0 0 0 6px;
 }
 .results_table a {
   float: inherit;
@@ -174,23 +162,20 @@ input:-moz-placeholder {
   background-repeat: no-repeat;
   background-position: top right;
 }
-.help_page p, li, h1, h2, span {
+.help_page p,.help_page li, .help_page h1, .help_page h2, .help_page span {
   text-align: left;
   color: var(--emperor);
 }
 .help_page h1 {
   font-size: var(--branding);
-  color: var(--emperor);
   margin: 20px 0px 20px 0px;
 }
 .help_page h2 {
   font-size: var(--header2);
-  color: var(--emperor);
   margin: 20px 0px 10px 0px;
 }
 .help_page p {
-  font-size: var(--std-text);
-  color: var(--emperor);
+  font-size: var(--header3);
   margin: 10px 0px 20px 0px;
 }
 .help_page span {
@@ -220,22 +205,15 @@ input:-moz-placeholder {
   text-align: left;
   color: var(--emperor);
 }
-.contact_wrapper {
-  width: 100%;
-}
 .feedback_field {
   border-radius: 6px;
   height: 22px;
   padding: 5px;
   border: 1px solid #BDBDBD;
-  margin-top: 15px;
-  max-width: 200px;
-  width: calc(100% - 72px);
+  width: calc(100% - 5px);
 }
-.feedback_label {
-  width: 55px;
-}
-.feedback_basic_wrapper {
+.feedback_label_wrap label {
+  float: left;
 }
 .feedback_textarea {
   left: 0px;
@@ -243,9 +221,44 @@ input:-moz-placeholder {
   border: 1px solid #BDBDBD;
   border-radius: 6px;
   background-color: #ffffff;
+  height: 60px;
+  max-width: 100%;
 }
 .feedback_submit {
   float: right;
+  height: 30px;
+  margin-top: 8px;
+  border-radius: 4px;
+  background-color: lightgreen;
+  border: none;
+}
+.contact_profile {
+  width: 100%;
+  display: inline-block;
+  margin-top: 20px;
+}
+.codecruncher {
+  width: 50%;
+  float: left;
+  display: inline-block;
+}
+.pixelninja {
+  width: 50%;
+  float: right;
+  display: inline-block;
+}
+.contactpic {
+  height: 80px;
+  width: 80px;
+  border-radius: 40px;
+  float: left;
+}
+.contactdescription {
+  padding-left: 90px;
+  padding-top: 15px;
+}
+.contactdescription p {
+  margin: 0px;
 }
 
 .login_container p {
@@ -295,7 +308,9 @@ input:-moz-placeholder {
   color: white;
   position: relative;
   left: 58px;
-  top: 13px;
+  top: 10px;
+  float: left;
+  text-align: left;
 }
 .secondary_facebook {
    font-size: 15px;
@@ -308,6 +323,7 @@ input:-moz-placeholder {
   color: grey;
   position: relative;
   left: 54px;
+  float: left;
   top: 10px;
 }
 .google_login {
@@ -350,8 +366,8 @@ input:-moz-placeholder {
   max-width: 400px;
   margin: 0 auto;
 }
-.add_postings_fields {
-  float: right;
+.add_posting_fields {
+  padding-bottom: 10px;
 }
 .add_posting_labels {
   width: 80px;
@@ -378,9 +394,6 @@ input:-moz-placeholder {
   font-size: var(--header3);
   padding-left: 20px;
   margin-top: 15px;
-}
-.add_posting_fields {
-  padding-bottom: 10px;
 }
 .add_posting_field {
   border-radius: 4px;
@@ -423,10 +436,12 @@ input:-moz-placeholder {
 .booktosell {
   font-size: 18px;
   padding: 0px 10px 0px 10px;
+  color: #fff;
 }
 .booktosell a {
   font-family: 'SourceSansPro-SemiBold';
   text-decoration: none;
+  color: #fff;
 }
 
 
@@ -452,9 +467,11 @@ input:-moz-placeholder {
 }
 .contact_in {
   text-decoration: none;
+  color: #fff;
 }
 .help_in {
   text-decoration: none;
+  color: #fff;
   margin-left: 15px;
 }
 .color {
@@ -469,6 +486,7 @@ input:-moz-placeholder {
   display: inline;
   text-decoration: none;
   cursor: pointer;
+  color: #fff;
 }
 .header {
   height: 65px;
@@ -497,7 +515,7 @@ input:-moz-placeholder {
   display: inline-block;
   font-family: 'SourceSansPro-SemiBold';
 }
-.header_invisible span, a, p {
+.header_invisible span, .header_invisible a, .header_invisible p {
   color: white;
 }
 .header a, span {
@@ -523,6 +541,17 @@ input:-moz-placeholder {
 }
 
 
+
+.wishlisting_table {
+  width: 100%;
+  display: inline-block;
+}
+.wishlisting_book {
+  display: inline-block;
+}
+.wishlisting_delete {
+  display: inline-block;
+}
 
 
 
