--- a/textchange/templates/404.html
+++ b/textchange/templates/404.html
@@ -1,20 +1,25 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
   {% include "textchange/head.html" %}
-  <body>
 
-    <div class="content_container">
-      {% include "textchange/navbar.html" %}
-      <div class="">
-        <h1>404 Page Not Found.</h1>
-        <h2>(╯'□')╯  ┻━┻</h2>
-      </br>
-        <p>Sorry about that, click <a href="{% url 'textchange:index' %}">here</a> to go home.</p>
+  <body onload="getColor()">
+
+<div class="content_outer">
+  <div class="content_container login_content_container">
+      <div class="login_container">
+        <div class="">
+          <h1>404 Page Not Found.</h1>
+          <h2>(╯'□')╯  ┻━┻</h2>
+        </br>
+          <p>Sorry about that, click <a href="{% url 'textchange:index' %}">here</a> to go home.</p>
+        </div>
       </div>
-
-      {% include "textchange/footer.html" %}
-
+    </div>
+  </div>
+    </body>
     </div> <!-- /container -->
 
   </body>
-</html>
+  </html>
