--- a/textchange/templates/textchange/help.html
+++ b/textchange/templates/textchange/help.html
@@ -7,51 +7,39 @@
       <h1 id"#top">Help Centre</h1>
       <span class="toc"><a href="#Create">Logging In</a></br></span>
       <span class="toc"><a href="#Search">Searching</a></br></span>
-      <span class="toc"><a href="#PostWish">Creating Postings and Wishes</a></br></span>
-      <span class="toc"><a href="#Contact">Contacting Buyers and Sellers</a></br></span>
+      <span class="toc"><a href="#PostWish">Creating Postings</a></br></span>
+      <span class="toc"><a href="#Contact">Contacting Sellers</a></br></span>
       <span class="toc"><a href="#Wishlisting">Managing Wishlist and Postings</a></br></span>
       <span class="toc"><a href="#QA">Frequently Asked Questions</a></br></span>
       <hr noshade>
       <h2 id="Create">Logging In</h2>
-      <p>In order to login simply click the Facebook login button in the top right corner of the screen. The reason we get you
-        login with Facebook is so you can communicate with other users when you want to buy or sell textbooks.
+      <p>Texchange provides two methods of logging in, Facebook and Google. To login click the "Login / Sign Up" button at the top right of the screen.
+        If you are logged in with Facebook and you make a posting, buyers will contact you through Facebook. If you are logged in with google and
+         you make a posting, buyers will contact you by e-mail.
       </p>
       <h2 id="Search">Searching</h2>
       <p>In order to search for textbooks type keywords into the search box on the home page. You can search for your textbooks by typing your
         class name, class number, textbook name, textbook isbn, textbook author, or any combination of the options listed. Entering multiple words into the search field will refine your search to match
-        both inputs. After searching you will be presented with a list of textbooks. Click on the row of any textbook you wish to view.      </p>
-      <h2 id="PostWish">Creating Postings and Wishes</h2>
-      <p>In order to create a posting or add a book to your wishlist you must first search for the textbook and select it from the results page. Afterwards,
-      you will be able to select the "Add a Posting" or "Add to Wishlist" buttons below the textbooks details. When you click "Add to Wishlist" the textbook
-      will be added to your wishlist immediately. When you click "Add a Posting" you will be brought to page in which you can add a price, condition, and image to
-      the posting. The price and condition fields are required. Below the textbook details and action buttons you can find lists of people who are looking for textbook
-      and lists of people who are selling the textbook.</p>
-      <h2 id="Contact">Contacting Buyers and Sellers</h2>
+        both inputs. After searching you will be presented with a list of posted textbooks. Click on one of those items to contact the seller.</p>
+      <h2 id="PostWish">Creating Postings</h2>
+      <p>In order to create a posting simple click on the "Sell" link in the center of the main page. Enter the ISBN of the book you wish to sell with <noscript>
+        spaces or hyphens, enter the school, enter the price, and enter a condition. The image and comments fields are optional.
+      </noscript></p>
+      <h2 id="Contact">Contacting Sellers</h2>
       <p>In order to contact a buyer or seller you must first search for the textbook and select it from the results page.
-      At the bottom of the textbook page you can see two lists, "Possible Buyers" and "Possible Sellers". "Possible Buyers" is a list
-      of all the people who are currently looking to purchase that textbook. "Possible Sellers" is a list of people who are currently
-      selling that textbook. Click on any of the rows in those columns to go to the contact page. On the contact page
-      you can find a link to their Facebook profile. Message them there.</p>
-      <h2 id="Wishlisting">Managing Wishlist and Postings</h2>
-      <p>You can manage your postings and wishes by clicking on the "Wishlists and Postings" button on the home page. From there
-      you can view and delete all your postings and wishes. You can also click on the textbook name to go to it's page.</p>
-      <h2 id="QA">Frequently Asked Questions</h2>
-      <p>Below are a number of frequently asked questions and their answers.</p>
+      Depending on the sellers preference either a link to their Facebook or their e-mail address will be visible. Use those to contact the seller.</p>
+      <h2 id="Wishlisting">Managing Postings</h2>
+      <p>You can manage your postings and wishes by clicking on your username in the top right and then clicking "Manage Postings". From there
+      you can view the textbook details by clicking it's name and you can delete your postings.</p>
+      <h2 id="QA">Potential Questions</h2>
       <ul>
-        <li type="circle"><strong>How do I add my textbooks to the application?</strong></li></br>
-        <li type="none">First you have to search for your textbook in the searchbox at the home page.
-          Once you select your textbook click "Add to Wishlist" if you are trying to buy that textbook
-          and "Add a Posting" and fill out the following form if you are trying to sell that textbook.
-          Now other users will see that you are buying or selling that textbook.</li></br>
-        <li type="circle"><strong>What is the advantage to adding postings and wishes?</strong></li></br>
-        <li type="none">Adding postings or wishes allows other users searching for that textbook to find you,
-          that way you don't have to constantly search for buyers and sellers.
-          You can let the buyers and sellers find you.</li></br>
-        <li type="circle"><strong>Why are multiple results showing item for the same textbook?</strong></li></br>
-        <li type="none">Multiple results show up for a textbook if the textbook is offered for more than one class.
-        However, no matter what class you click on you will see all the postings and wishes for that textbook between
-        all of the classes.</li></br>
-        <li type="circle"><strong>Why can't I message people on Facebook?</strong></li></br>
+        <li type="none" class="semibold">Are more schools going to be added to the application?</li></br>
+        <li type="none">Once we figure out an efficient way of getting other universities textbooks they will be added to the application.
+        We are currently looking at SFU and UBC.</li></br>
+        <li type="none" class="semibold">Why does the application take so long to initially load?</li></br>
+        <li type="none">Previouslly we were paying monthly bills for this service to be hosted however as it is not making us money we have opted for downgrading our hosting services.
+        One of the downfalls of this is that if no one has used the application recently it will take awhile to load.</li></br>
+        <li type="none" class="semibold">Why can't I message people on Facebook?</li></br>
         <li type="none">If you do not have the option to message someone on Facebook then their security settings may be too strict.
         Make sure to set your settings so that "Anyone" can message you that people are not running into the same problem when messaging you.</li></br>
       </ul>
