--- a/textchange/static/textchange/mycss.css
+++ b/textchange/static/textchange/mycss.css
@@ -46,6 +46,9 @@ p {
   src: url('fonts/SourceSansPro-Semibold.ttf');
 }
 
+.semibold {
+  font-family: 'SourceSansPro-SemiBold';
+}
 .description_text {
   color: var(--grey) !important;
 }
@@ -61,7 +64,8 @@ p {
 .errorlist {
   margin: 0px;
   list-style: none;
-  padding-left: 81px;
+  text-align: left;
+  padding-left: 88px;
 }
 .errorlist li {
   color: red;
@@ -205,6 +209,16 @@ p {
   text-align: left;
   color: var(--emperor);
 }
+.about_page .errorlist {
+  margin: 0px;
+  list-style: none;
+  text-align: left;
+  padding-left: 5px;
+}
+.about_page .errorlist li {
+  color: red;
+  font-size: 12px;
+}
 .feedback_field {
   border-radius: 6px;
   height: 22px;
@@ -237,21 +251,16 @@ p {
   display: inline-block;
   margin-top: 20px;
 }
-.codecruncher {
-  width: 50%;
-  float: left;
-  display: inline-block;
-}
-.pixelninja {
-  width: 50%;
-  float: right;
-  display: inline-block;
-}
 .contactpic {
   height: 80px;
   width: 80px;
   border-radius: 40px;
   float: left;
+}
+.contacticon {
+  height: 18px;
+  width: 18px;
+  border-radius: 9px;
 }
 .contactdescription {
   padding-left: 90px;
@@ -346,11 +355,14 @@ p {
 }
 
 .post_info {
-  width: 350px;
+  width: 50%;
   float: left;
 }
+.post_info p {
+  text-align: left;
+}
 .post_image {
-  width: 240px;
+  width: 50%;
   float: right;
 }
 
@@ -543,14 +555,24 @@ p {
 
 
 .wishlisting_table {
-  width: 100%;
   display: inline-block;
+  border: 1px solid #E3E3E3;
 }
 .wishlisting_book {
   display: inline-block;
-}
+  padding: 5px 25px 5px 5px;
+ }
 .wishlisting_delete {
+  border-left: 1px solid #E3E3E3;
   display: inline-block;
+  padding: 5px;
+}
+.wishlisting_delete input {
+  height: 30px;
+  width: 65px;
+  background-color: red;
+  border: none;
+  border-radius: 4px;
 }
 
 
