--- a/textchange/templates/textchange/navbar.html
+++ b/textchange/templates/textchange/navbar.html
@@ -37,7 +37,7 @@ window.onclick = function(event) {
         <div class="dropdown">
           <span onclick="myFunction()" class="dropbtn">Hi, {{request.user.first_name}}!</span>
           <div id="myDropdown" class="dropdown-content">
-              <a class="btn btn-lg btn-success option" href="{% url 'textchange:wishlisting' %}" role="button">Wishlist and Postings</a>
+              <a class="btn btn-lg btn-success option" href="{% url 'textchange:wishlisting' %}" role="button">Manage Postings</a>
               <a href="{% url 'textchange:navbar' %}" class="softbutton">Logout</a>
           </div>
         </div>
