--- a/textchange/templates/404.html
+++ b/textchange/templates/404.html
@@ -10,8 +10,8 @@
   <div class="content_container login_content_container">
       <div class="login_container">
         <div class="">
-          <h1>404 Page Not Found.</h1>
-          <h2>(╯'□')╯  ┻━┻</h2>
+          <p>404 Page Not Found.</p>
+          <p>(╯'□')╯  ┻━┻</p>
         </br>
           <p>Sorry about that, click <a href="{% url 'textchange:index' %}">here</a> to go home.</p>
         </div>
