--- a/textchange/templates/500.html
+++ b/textchange/templates/500.html
@@ -6,8 +6,8 @@
     <div class="content_container">
       {% include "textchange/navbar.html" %}
       <div class="">
-        <h1>500 Server Error.</h1>
-        <h2>(╯'□')╯  ┻━┻</h2>
+        <p>500 Server Error.</p>
+        <p>(╯'□')╯  ┻━┻</p>
       </br>
         <p>Sorry about that, click <a href="{% url 'textchange:index' %}">here</a> to go home.</p>
       </div>
