--- a/textchange/templates/textchange/head.html
+++ b/textchange/templates/textchange/head.html
@@ -9,7 +9,7 @@
   <meta name="format-detection" content="telephone=no" />
   <link rel="icon" href="../../favicon.ico">
 
-  <title>UVic Texchange Exchange Textbooks at University of Victoria</title>
+  <title>Texchange - Exchange Textbooks at University of Victoria (UVic)</title>
 
 
 
