--- a/textchange/templates/textchange/wishlisting.html
+++ b/textchange/templates/textchange/wishlisting.html
@@ -6,13 +6,13 @@
     <div class="content_container">
       <div class="manage_container standard_container">
       <div class="">
-      <h2>Your Postings</h2>
+      <p>Your Postings</p>
       <span>Click on the book to view more details.</span><br />
       </div>
 
       <div class="">
         <div class="">
-          <h3>Your Postings</h3>
+          <p>Your Postings</p>
           <div class="wishlisting_table">
             {% if not postings %}
               <div><div><p>You do not currently have any postings.</p></div></div>
