--- a/textchange/static/textchange/phonecss.css
+++ b/textchange/static/textchange/phonecss.css
@@ -15,7 +15,7 @@
 .login_container {
   min-height: calc(100vh - 25px);
   position: relative;
-  width: calc(100vw - 2px);
+  min-width: 355px;
   top: 0;
   padding: 0px 20px 0px 20px;
 }
