--- a/textchange/templates/textchange/help.html
+++ b/textchange/templates/textchange/help.html
@@ -4,7 +4,7 @@
     <div class="content_outer">
       <div class="content_container">
         <div class="help_page standard_container">
-      <h1 id"#top">Help Centre</h1>
+      <p id"#top">Help Centre</p>
       <span class="toc"><a href="#Create">Logging In</a></br></span>
       <span class="toc"><a href="#Search">Searching</a></br></span>
       <span class="toc"><a href="#PostWish">Creating Postings</a></br></span>
@@ -12,39 +12,37 @@
       <span class="toc"><a href="#Wishlisting">Managing Wishlist and Postings</a></br></span>
       <span class="toc"><a href="#QA">Frequently Asked Questions</a></br></span>
       <hr noshade>
-      <h2 id="Create">Logging In</h2>
+      <p id="Create">Logging In</p>
       <p>Texchange provides two methods of logging in, Facebook and Google. To login click the "Login / Sign Up" button at the top right of the screen.
         If you are logged in with Facebook and you make a posting, buyers will contact you through Facebook. If you are logged in with google and
          you make a posting, buyers will contact you by e-mail.
       </p>
-      <h2 id="Search">Searching</h2>
+      <p id="Search">Searching</p>
       <p>In order to search for textbooks type keywords into the search box on the home page. You can search for your textbooks by typing your
         class name, class number, textbook name, textbook isbn, textbook author, or any combination of the options listed. Entering multiple words into the search field will refine your search to match
         both inputs. After searching you will be presented with a list of posted textbooks. Click on one of those items to contact the seller.</p>
-      <h2 id="PostWish">Creating Postings</h2>
+      <p id="PostWish">Creating Postings</p>
       <p>In order to create a posting simple click on the "Sell" link in the center of the main page. Enter the ISBN of the book you wish to sell with <noscript>
         spaces or hyphens, enter the school, enter the price, and enter a condition. The image and comments fields are optional.
       </noscript></p>
-      <h2 id="Contact">Contacting Sellers</h2>
+      <p id="Contact">Contacting Sellers</p>
       <p>In order to contact a buyer or seller you must first search for the textbook and select it from the results page.
       Depending on the sellers preference either a link to their Facebook or their e-mail address will be visible. Use those to contact the seller.</p>
-      <h2 id="Wishlisting">Managing Postings</h2>
+      <p id="Wishlisting">Managing Postings</p>
       <p>You can manage your postings and wishes by clicking on your username in the top right and then clicking "Manage Postings". From there
       you can view the textbook details by clicking it's name and you can delete your postings.</p>
-      <h2 id="QA">Potential Questions</h2>
-      <ul>
-        <li type="none" class="semibold">Are more schools going to be added to the application?</li></br>
-        <li type="none">Once we figure out an efficient way of getting other universities textbooks they will be added to the application.
-        We are currently looking at SFU and UBC.</li></br>
-        <li type="none" class="semibold">Why does the application take so long to initially load?</li></br>
-        <li type="none">Previouslly we were paying monthly bills for this service to be hosted however as it is not making us money we have opted for downgrading our hosting services.
-        One of the downfalls of this is that if no one has used the application recently it will take awhile to load.</li></br>
-        <li type="none" class="semibold">Why can't I message people on Facebook?</li></br>
-        <li type="none">If you do not have the option to message someone on Facebook then their security settings may be too strict.
-        Make sure to set your settings so that "Anyone" can message you that people are not running into the same problem when messaging you.</li></br>
-      </ul>
+      <p id="QA">Potential Questions</p>
+        <p class="semibold">Are more schools going to be added to the application?</p>
+        <p>Once we figure out an efficient way of getting other universities textbooks they will be added to the application.
+        We are currently looking at SFU and UBC.</p>
+        <p class="semibold">Why does the application take so long to initially load?</p>
+        <p>Previouslly we were paying monthly bills for this service to be hosted however as it is not making us money we have opted for downgrading our hosting services.
+        One of the downfalls of this is that if no one has used the application recently it will take awhile to load.</p>
+        <p class="semibold">Why can't I message people on Facebook?</p>
+        <p>If you do not have the option to message someone on Facebook then their security settings may be too strict.
+        Make sure to set your settings so that "Anyone" can message you that people are not running into the same problem when messaging you.</p>
       <p><a href="{% url 'textchange:fbpolicy' %}">Facebook Privacy Policy</a></p>
-      <p><a href="#top">Back to Top</a></p>
+      <p><a href="#top" class="backtotop">Back to Top</a></p>
     </div>
   </div>
 </div>
